# flatpak-gen

./: .gitignore  pyproject.toml  readme.md
src/: generators.py  neovide.py
src/generators/: flatpak_cargo_generator.py  flatpak_pip_generator.py  main.py
