[project]
dependencies = [
    'flatpak_cargo_generator',
    'flatpak_node_generator',
    'flatpak_pip_generator',
]
name = 'flatpak_gen'
version = '24.0.0'
readme = 'readme.md'
requires-python = '>=3.11'
classifiers = [
    'License :: OSI Approved :: GNU Affero General Public License v3',
]

[tool.pyright]
venvPath = '.'
venv = '.venv'

